# QNcidNotify

./: CMakeLists.txt  QNcidLogDialog.cpp  QNcidLogDialog.h  QNcidNotify.cpp  QNcidNotify.h  QNcidNotify.kdev4  QNcidNotify.qrc  QNcidNotifyOptions.cpp  QNcidNotifyOptions.h  QNcidOptionsDialog.cpp  QNcidOptionsDialog.h  QNcidSocket.cpp  QNcidSocket.h  README.md  config.h.in  main.cpp  plasma-applet-qncidnotify.desktop
